# GLren

./: .gitignore  .gitmodules  CMakeLists.txt  GLnew.sln  GenerateProject.bat  README.md  premake5.lua
Assets/Shaders/: LightCubeShader.shader
GLnew/: GLnew.vcxproj  GLnew.vcxproj.filters
GLnew/ExternalVendors/Glad/: Glad.vcxproj  premake5.lua
GLnew/ExternalVendors/Glad/include/glad/: glad.h
GLnew/ExternalVendors/Glad/src/: glad.c
GLnew/res/Shaders/: BasicMesh.shader
GLnew/src/: Source.cpp
GLnew/src/Camera/: camera.cpp  camera.h
GLnew/src/Entities/: Entity.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Vegetation.cpp  Vegetation.h  cube.cpp  entity.h
GLnew/src/Lighting/: DirectionalLight.h  FlashLight.h  Flashlight.cpp  PointLight.cpp  SkyLight.cpp  SkyLight.h  SpotLight.h
GLnew/src/Materials/: Material.cpp  Material.h
GLnew/src/Memory/: Memory.cpp  Memory.h
GLnew/src/Renderer/: Renderer.cpp  Renderer.h
GLnew/src/Shader/: Shader.h
GLnew/src/Texture/: stb.h  texture.cpp  texture.h
GLnew/src/Window/: glfwCallbacks.cpp  glfwCallbacks.h  window.cpp  window.h
src/: Source.cpp
src/Camera/: camera.cpp  camera.h
src/Entities/: Entity.cpp  cube.cpp  cube.h  entity.h
src/Lighting/: DirectionalLight.cpp  Flashlight.cpp  PointLight.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Shader/: Shader.cpp  Shader.h
src/Texture/: texture.cpp  texture.h
src/Window/: DefaultEvents.cpp  Events.cpp  Events.h  window.cpp  window.h
